css/index.css
:root {
    --bg1: #181735;
    --bg2: #444394;
    --bg3: #ffffff;
    --text-color: #ffffff;
    --text-color-inactive: rgba(255, 255, 255, 0.5);
    --fs-bg: rgba(24, 23, 53, 0.70);
}

@media (prefers-color-scheme: light) {
    .dark_mode {
        --bg1: #f4f4f4;
        --bg3: #181735;
        --text-color: #444394;
        --fs-bg: rgba(244, 244, 244, 0.70);
    }
}

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    font-family: "Lato", sans-serif;
    font-weight: 400;
    font-style: normal;
    background: var(--bg2);
    display: flex;
    color: var(--text-color);
    height: 100vh;
    width: 100vw;
    overflow: hidden;
    transition: color .5s;
}

header {
    height: 100vh;
    color: var(--text-color-inactive);
    display: flex;
    flex-direction: column;
    gap: 24px;
    justify-content: center;
    align-items: center;
    padding: 0 12px;
}

header .material-symbols-rounded {
    font-size: 32px !important;
    transition: color .3s;
}
header .material-symbols-rounded.active {
    color: #ffffff;
}
header .material-symbols-rounded:hover {
    color: #ffffff;
}

.nav__item {
    cursor: pointer;
    padding: 12px;
    user-select: none;
}

.head {
    position: relative;
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding: 32px 64px;
    /*background: rgba(68, 67, 148, 0.2);*/
}
.theme-toggle {
    position: absolute;
    right: 64px;
    top: 50%;
    transform: translateY(-50%) scale(2);
}
.logo-title {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 24px;
    font-weight: bold;
}
.title {
    font-size: 30px;
}
.logo {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 4px;
    font-size: 22px;
    transform: scale(1.2);
}

main {
    background: var(--bg1);
    border-radius: 45px 0 0 45px;
    height: 100vh;
    flex-grow: 2;
    box-shadow: -8px 0 12px rgba(0, 0, 0, 0.07);
    overflow: hidden;
    transition: background-color .5s;
}
.container {
    padding: 32px 64px;
}

.git {
    display: flex;
    justify-content: end;
    align-items: center;
    gap: 4px;
    color: var(--text-color);
    font-size: 16px;
    position: absolute;
    bottom: 32px;
    right: 32px;
    z-index: 1;
}

.git svg {
    width: 20px;
    height: 20px;
}


.bestGames {
    display: flex;
    gap: 32px;
}

.card {
    //padding: 16px;
    width: 27%;
    border-radius: 16px;
    overflow: hidden;
    box-shadow: 0 0 8px rgba(255, 255, 255, 0.10);
}
/*.card:hover {
    box-shadow: 0 0 24px rgba(255, 255, 255, 0.25);
}*/
.card__img {
    width: 100%;
    height: 175px;
}
.card__title {
    position: relative;
    font-weight: bold;
    font-size: 20px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 24px 24px 24px 48px;
    color: #000000;
    background: #ffffff;
}
.card__title .material-symbols-rounded.play {
    font-size: 32px;
    cursor: pointer;
    user-select: none;
    transition: .2s ease-in-out;
}
.card__title .material-symbols-rounded.play:hover {
    transform: scale(1.3);
}
.card__title:before {
    content: "";
    position: absolute;
    left: 20px;
    width: 16px;
    height: 16px;
    display: block;
    background: #ffffff;
    border-radius: 50px;
}
.card__note {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 8px;
    font-weight: bold;
    font-size: 16px;
    color: rgba(0, 0, 0, 0.80);
    padding: 10px;
    border-radius: 0 0 16px 0;
    background: #ffffff;

    width: max-content;
}
.card__note .material-symbols-rounded {
    color: #f7c400;
    font-size: 22px;
}

#login {
    display: none;
}

#game {
    display: none;
    width: 100%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 5;
}
#game.fullscreen {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: var(--fs-bg);
    backdrop-filter: blur(5px);
}

.game-screen {
    width: 70vw;
    height: auto;
    aspect-ratio: 16/9;
    border-radius: 35px;
    border: none;
}
#game.fullscreen .game-screen {
    width: 100%;
    height: 100%;
    aspect-ratio: auto;
}
.game_nav {
    color: #ffffff;
    position: absolute;
    left: 50%;
    top: 0;
    z-index: 10;
    transform: translateX(-50%) translateY(-100%);
    padding: 10px 32px;
    background: var(--bg2);
    border-radius: 0 0 32px 32px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 32px;
    transition: transform .3s ease-in-out;
}
.game_nav.show {
    transform: translateX(-50%) translateY(0);
}
.game_nav.hide {
    transform: translateX(-50%) translateY(-100%);
}
.game_nav.close {
    transform: translateX(-50%) translateY(-55%);
    color: transparent;
}
.game_nav_btn {
    cursor: pointer;
    padding: 10px;
    border-radius: 100%;
    user-select: none;
    transition: .2s;
}
.game_nav_btn:hover {
    background: rgba(255, 255, 255, 0.10);
}
.game-select {
    position: relative;
}
.game-select .material-symbols-rounded {
    position: absolute;
    right: 8px;
    top: 50%;
    transform: translateY(-50%);
}
#game-selection {
    color: inherit;
    font-size: 16px;
    border: none;
    background: rgba(255, 255, 255, 0.0);
    font-weight: bold;
    border-radius: 8px;
    padding: 8px 48px 8px 12px;
    appearance: none;
    -webkit-appearance: none;
    cursor: pointer;
    transition: .2s;
    width: max-content;
}
#game-selection:hover {
    background: rgba(255, 255, 255, 0.10);
}
.bestGames{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

/*
    LOGIN
 */
#newAccountPage {
    display: none;
}

#mdpForgetPage {
    display: none;
}

/*
    JEUX
 */
#mouse_c .card__img{
    background: url("../assets/Mistigri-la-souris.png") no-repeat center top/cover;
}
#mouse_c .card__title:before {
    background: rgb(0, 128, 0);
}
#tic-tac-toe_c .card__img{
    background: url("../assets/Tic-Tac-Toe.png") no-repeat center top/cover;
}
#tic-tac-toe_c .card__title:before {
    background: rgb(218, 112, 214);
}
#snake_c .card__img{
    background: url("../assets/Snake-2.png") no-repeat center top/cover;
}
#snake_c .card__title:before {
    background: rgb(197, 4, 4);
}
#tetris_c .card__img {
    background: url("../assets/Tetris.png") no-repeat center top/cover;
}
#tetris_c .card__title:before {
    background: rgb(255, 165, 0);
}
#deminer_c .card__img{
    background: url("../assets/deminer-2.png") no-repeat center top/cover;
}
#deminer_c .card__title:before{
    background: rgb(128,128,128);
}

